--- a/docs/research-statement/statement.tex
+++ b/docs/research-statement/statement.tex
@@ -26,7 +26,9 @@
             anchorcolor = blue]{hyperref}
 \usepackage{tgheros}
 \usepackage[most]{tcolorbox}
-\renewcommand{\familydefault}{\sfdefault}
+\usepackage{newpxtext}
+\usepackage[T1]{fontenc}
+%\renewcommand{\familydefault}{\sfdefault}
 
 
 
