--- a/docs/teaching-statement/content.tex
+++ b/docs/teaching-statement/content.tex
@@ -1,116 +1,62 @@
-\section*{Teaching Preferences}
+\begin{mdquote}
+``Tell me and I forget, teach me and I may remember, involve me and I learn.'' --- Benjamin Franklin
+\end{mdquote}
 
-Teaching Computer Science is in general exciting to me. My background
-makes me an ideal fit to teach graduate and undergraduate courses in
-Programming Languages, Formal Methods, Software Engineering,
-Databases, Distributed Systems, and Operating Systems. I would like to
-contribute to their curriculum drawing from my research experience at
-the intersection of these diverse fields. Software Engineering, for
-example, could be enriched with lectures and exercises on applying
-state-of-the-art program analyses on open-source databases,
-distributed systems, and web applications readily available on Github.
-The access to full provenance -- commit history, bug reports, their
-resolutions, and developer comments, makes it possible to compare the
-results of the analyses on multiple versions of the source code, and
-determine their effectiveness in detecting the bugs known to be real
-or false.  This would let students understand the shortcomings of the
-state-of-the-art in addressing the real-world problems, and prepare
-them for further research in Software Engineering. Likewise, I would
-extend the curriculum of Systems courses with recent developments in
-trustworthy sofware systems, such as Unikernels, IronFleet, seL4, and
-FSCQ File System. A graduate-level Programming Languages course, I
-believe, would benefit from an emphasis on automated reasoning
-wherever possible. While I do see the value in teaching students how
-to write certified programs and meta-theoretic proofs (normalization,
-type safety etc), I don't think making them labor through most mundane
-proofs in Coq is the way to go. Instead, I would restructure any such
-course around proof systems that put automation first, such as F*,
-Dafny, Lean, and Liquid Haskell. 
-% I would encourage students to think about automation \emph{in
-% conjunction} with verfication and theorem proving, for my experience
-% suggests that a consideration of former would significantly alter
-% one's approach towards later.
+My teaching philosophy is grounded in one core principle: students truly learn only when they can see a skill’s practical value in their own lives and future work. When learners recognize how a concept connects to problems they care about, the motivation to engage deeply follows naturally. Conversely, if the relevance is unclear, even the most elegant exposition may fall flat. This belief shapes every aspect of my course design, delivery, and mentorship.
 
-I also have ideas for new courses that prepare graduate students for
-inter-disciplinary research with other branches of science and
-humanities. In particular, I am most excited about a seminar course
-that explores the possibility of using programs as a means of
-capturing human knowledge and thought process in the fields of
-Medicine, Law, and Economics. I am inspired by the recent successes of
-the pioneering work done by our fellow computer scientists in this
-direction. Examples include automated drug discovery by Might et al's
-MediKanren (OOPSLA'19 Keynote-1), Tax loopholes detection through
-Formal Methods by Lawsky et al (POPL'18 Keynote-3), and inviolable
-economic ``smart'' contracts on the emerging Blockchain
-infrastructure. I think it is worthwhile to institute a course to
-focus on such diverse applications of Computer Science so as to
-broaden the perspective of our graduate students as they decide on
-their thesis topics.
+\section*{Educational Contributions}
+Since joining CU Boulder, I have participated in the educational mission of both the Programming Languages and Verification (PLV) and the Systems groups. I have taught graduate courses such as:
+\begin{itemize}
+    \item \textbf{Fundamentals of Programming Languages} (CSCI 5535/ECEN 5533; Fall 2021, Fall 2024)
+    \item \textbf{Advanced Functional Programming} (CSCI 7000; Spring 2023)
+    \item \textbf{Distributed Systems Verification} (CSCI 7000; Spring 2021, Spring 2024)
+\end{itemize}
+At the undergraduate level, I have taught \textbf{Programming Languages} (CSCI 3155) to hundreds of students across multiple semesters (Spring 2021, Spring 2022, Fall 2023, Spring 2025). 
 
-\section*{Teaching Methodology}
+In CSCI 3155, students explore topics such as functional programming, operational semantics, interpreters, type systems, continuations, object-oriented programming, and garbage collection. In my graduate courses, topics range from formal semantics, type theory, and program verification to advanced functional programming paradigms, distributed algorithms, and verification techniques. Detailed schedules and materials for all my courses are publicly available:
+\begin{itemize}
+    \item CSCI 5535: \url{https://csci5535.cs.colorado.edu/f24/}
+    \item CSCI 7000 Advanced Functional Programming: \url{https://gowthamk.github.io/csci7000_pfp_s23/}
+    \item CSCI 7000 Distributed Systems Verification: \url{https://gowthamk.github.io/csci7000_s21/}
+\end{itemize}
 
-In this section, I shall explain two core principles behind my
-teaching methodology.
+For each of these graduate-level courses, I designed the curriculum and developed all instructional materials myself. These websites not only provide students with lecture notes, assignments, and code but also serve as open resources for the broader academic community.
 
-{\itshape\color{MidnightBlue} Utility over aesthetics; problems over
-solutions} In my observation, the common motivation for students to
-enroll in a course is to acquire the skills that they believe will
-help them in their career in research or industry. It is therefore
-understandable that if a student fails to see a clear causal
-relationship between a concept taught in the class and her
-professional success, she would disengage from the learning process. I
-believe there has to be a compelling utility of what is taught in the
-class in the context of students' professional journey. Such problem-
-and utility-guided approach to teaching is, I believe, more productive
-than the alternative approaches that stress on solutions, concepts and
-their aesthetics.
+\section*{Making Utility Visible}
+In my classrooms, I strive to bridge theory with lived application. When introducing an abstract concept—be it continuations in functional programming or model checking in distributed systems—I begin by situating the idea in a context the students can relate to. This could mean:
+\begin{itemize}
+    \item Demonstrating how type systems prevent security vulnerabilities in real-world software.
+    \item Connecting garbage collection algorithms to memory management issues in industry-scale systems.
+    \item Linking verification techniques to the reliability demands of distributed systems like blockchain or NASA flight software.
+\end{itemize}
+By framing concepts in terms of tangible utility, students not only engage but also begin to transfer their learning to new, unfamiliar domains.
 
-{\itshape\color{MidnightBlue} Rigor over breadth} A CS instructor
-should strike a right balance between the breadth of a course
-curriculum, and the rigor with which the topics are taught in the
-class. When in quandary, I believe it is better to err on the side of
-rigor at the expense of breadth for rigor begets clarity, and clarity
-is a necessary precondition to transform passive subject knowledge
-into an active skill when an opportunity presents itself. Thus it is
-imperative to prioritize rigor over breadth in our teaching if we were
-to produce students who are highly skilled and not merely
-knowledgeable.
+\section*{Course Design and Delivery}
+My classes are highly interactive and often make use of live coding,
+collaborative problem-solving, and real-time polling tools to check
+understanding and adjust pacing. I integrate project-based learning
+wherever possible—asking students to build interpreters, experiment with
+language features, or verify non-trivial protocols. These projects give
+students the dual satisfaction of mastering theory while producing
+something functional and relevant. I also maintain public websites, which
+play a crucial role in my teaching. Beyond providing transparency and
+accessibility, they allow students to revisit materials at their own pace
+and serve as a portfolio of my evolving pedagogical approach.
 
-\section*{Teaching Experience}
+\section*{Mentorship}
+Mentoring is where my teaching philosophy extends most naturally into research. Since joining CU, I have advised 4 Ph.D. students, 3 M.S. students, and 7 undergraduates. All 7 of my major publications at CU have been co-authored with CU students. 
 
-As a Visiting Assistant Professor at Purdue, I teach CS307 Software
-Engineering to undergraduates this (Fall'19) semester, which gives me
-an opportunity to test some of my ideas and beliefs in practice. The
-curriculum I designed (with significant inputs from my co-instructor
-and the previous instructors) includes Agile practices, basic and
-advanced testing techniques, Symbolic and Concolic execution
-strategies, a primer on concurrency bugs, and Gradual Typing. The
-major evaluation component of the course is a semester-long software
-engineering project, where students develop a large-scale web
-application in three ``sprints''. I have therefore structured my
-instruction to relate every concept taught in the class to real
-problems developers face in building large-scale web applications
-today. For instance, the lecture on concurrency bugs includes code
-examples from web applications, and a demonstration of how they can be
-exploited by hackers to inflict a financial loss (inspired by
-Warszawski et al, SIGMOD'17). Likewise the lecture on Gradual Typing
-includes examples contrasting Javascript from its gradually-typed
-variant -- Typescript, and a demonstration of how the latter benefits
-frontend web developers. While the formal feedback is still pending,
-the informal feedback I got from students so far has been extremely
-encouraging.
+Highlights of my mentoring include:
+\begin{itemize}
+    \item My senior Ph.D. student, Nicholas Lewchenko, is on track to graduate in Fall 2025.
+    \item Undergraduate thesis student Pranav Subramanian defended his thesis and joined NASA Goddard Space Flight Center as a Software Engineer.
+    \item Two of my undergraduate mentees came from front range community colleges through the SPUR internship program.
+    \item Current undergraduates Noah Schwartz and Oscar Bender-Stone are applying to Ph.D. programs this year.
+\end{itemize}
 
-\section*{Mentorship Experience}
+As part of the CUPLV group, my students benefit from a vibrant research community. I help organize a weekly student-led seminar and twice-weekly status meetings, in addition to one-on-one weekly advising sessions. These structures foster collaboration, peer learning, and sustained research momentum. 
 
-During my graduate studies at Purdue, I have had the opportunity to
-mentor junior graduate students who later became my co-authors. On
-four of my research papers, my immediate co-author (2nd or 1st) is a
-junior graduate student for whom it was the first ever publication.
-Beyond one-to-one mentorship, I have also taken initiatives for
-collective professional advancement that have stood the test of time.
-PurPL, a Purdue PL reading group I started in Fall 2013, is still
-active today\footnote{PurPL matured into a larger research
-organization at Purdue, but that is largely due to the efforts of
-others.}. I will be sure to take more such initiatives in the future
-as I enjoy sharing the excitement of learning and discovery with my
-fellow researchers.
+Mentoring, to me, is a reciprocal process: my students bring fresh perspectives that challenge me to re-examine familiar problems, while I provide the guidance, focus, and encouragement needed to turn promising ideas into polished contributions.
+
+\section*{Closing Thoughts}
+Whether in the classroom or the research lab, my aim is to spark curiosity by showing students the practical power of the concepts they are learning. When they can see how an idea might shape their own future projects or careers, the drive to master it comes naturally—and that, in my view, is when real learning happens.
